--- a/source/less/elements/form.less
+++ b/source/less/elements/form.less
@@ -4,7 +4,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 67px 80px;
- }
+  }
 }
 
 .form__group {
@@ -25,7 +25,6 @@
   @media (min-width: @tablet-width) {
     display: flex;
     margin: 0 70px;
-
   }
 
   @media (min-width: @desktop-width) {
@@ -37,13 +36,14 @@
 .form__button {
   display: block;
   width: 100%;
-  margin-bottom: 21px;
+  margin-bottom: 20px;
+  font-size: 16px;
+  line-height: 20px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 0;
     width: 306px;
     padding-bottom: 18px;
-
   }
 
   @media (min-width: @desktop-width) {
@@ -57,7 +57,7 @@
   font-size: 14px;
   line-height: 16px;
   color: #000000;
-  padding-left: 84px;
+  padding-left: 62px;
   display: block;
 
   @media (min-width: @tablet-width) {
