--- a/source/less/elements/group-contact.less
+++ b/source/less/elements/group-contact.less
@@ -1,5 +1,5 @@
 .group-contact {
-  padding-top: 25px;
+  padding-top: 26px;
   grid-column: 1/-1;
 
   @media (min-width: @tablet-width) {
@@ -8,7 +8,7 @@
 }
 
 .group-contact__title {
-  margin-bottom: 35px;
+  margin-bottom: 32px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 72px;
@@ -53,5 +53,5 @@
 }
 
 .group-contact__input {
-  padding-right: 45px;
+  padding: 0 45px 0 12px;
 }
