--- a/source/less/style.less
+++ b/source/less/style.less
@@ -38,6 +38,8 @@
 @import "./elements/catalog.less";
 @import "./elements/additional.less";
 @import "./elements/add-card.less";
+@import "./base/blocks/map.less";
+@import "./base/blocks/logo.less";
 
 
 
