--- a/source/less/base/blocks/button.less
+++ b/source/less/base/blocks/button.less
@@ -17,6 +17,14 @@
     font-size: 20px;
     line-height: 20px;
   }
+
+  &:hover {
+    background-color: #5eaa2f;
+  }
+
+  &:active {
+    color: fade(@color-light, 30%);
+  }
 }
 
 
