--- a/source/less/base/blocks/invite.less
+++ b/source/less/base/blocks/invite.less
@@ -1,3 +1,16 @@
+.invite {
+  @media (min-width: @desktop-width) {
+    position: relative;
+    padding: 95px 0 107px;
+  }
+}
+
+.invite--theme {
+  @media (max-width: @desktop-width) {
+    background-color: @color-dark;
+  }
+}
+
 .invite__wrapper {
   padding: 26px 20px;
   display: flex;
@@ -5,8 +18,18 @@
   min-width: 320px;
 
   @media (min-width: @tablet-width) {
-    padding: 56px 70px;
-    min-width: @tablet-width;
+    padding: 57px 70px 61px;
+  }
+
+  @media (min-width: @desktop-width) {
+    background-color: @color-light;
+    padding: 56px 60px 56px 80px;
+    width: 565px;
+    position: relative;
+    z-index: 5;
+    left: 50%;
+    margin-left: -610px;
+    min-width: auto;
   }
 }
 
@@ -23,19 +46,34 @@
     font-size: 20px;
     line-height: 26px;
     width: 170px;
+    padding-top: 3px;
   }
-
 }
 
 .invite__address {
   line-height: 20px;
   width: 139px;
+  .font-descr();
+  font-size: 14px;
+  color: #444444;
+
+  @media (min-width: @tablet-width) {
+    width: 160px;
+    font-size: 16px;
+    text-align: right;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 175px;
+    text-align: left;
+  }
 }
 
-.invite__link {
-  display: block;
+.invite__address-span {
+  @media (min-width: @tablet-width) {
+    display: inline-block;
+    padding-top: 20px;
+  }
 }
 
-.invite__image {
-  width: 100%;
-}
+
