--- a/source/less/base/blocks/main-nav.less
+++ b/source/less/base/blocks/main-nav.less
@@ -37,8 +37,8 @@
 .main-nav__toggle::before {
   content: "";
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 1px;
+  right: -3px;
   width: 25px;
   height: 20px;
   background: url("../img/mobile-closed.svg") no-repeat center center;
@@ -46,6 +46,10 @@
 
 .main-nav--closed .main-nav__toggle::before {
   background: url("../img/nav-button-mobile.svg") no-repeat center center;
+}
+
+.main-nav--closed .main-nav__toggle:hover::before {
+  opacity: 0.8;
 }
 
 .main-nav__list--js {
