--- a/source/less/base/blocks/nav-list.less
+++ b/source/less/base/blocks/nav-list.less
@@ -31,12 +31,22 @@
     .font-basic();
     font-size: 18px;
     line-height: 24px;
+    padding-bottom: 7px;
   }
 
   @media (min-width: @desktop-width) {
     font-size: 20px;
     line-height: 30px;
     color: @color-light;
+  }
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 1;
+    border-bottom: 2px solid #68b738;
   }
 }
 
@@ -58,6 +68,33 @@
   }
 }
 
+.nav-list__link--index {
+  &:hover {
+    @media (min-width: @desktop-width) {
+      opacity: 0.6;
+    }
+  }
+
+  &:active {
+    @media (min-width: @desktop-width) {
+      opacity: 1;
+      border-bottom: 2px solid @color-light;
+    }
+  }
+}
+
+.nav-list__link--disabled {
+  color: fade(#000000, 30%);
+  cursor: default;
+}
+
+.nav-list__link--index-disabled {
+  @media (min-width: @desktop-width) {
+    color: fade(@color-light, 30%);
+    cursor: default;
+  }
+}
+
 .nav-list__item {
   padding-top: 22px;
   padding-bottom: 14px;
@@ -67,6 +104,7 @@
 
   @media (min-width: @tablet-width) {
     border: none;
+    padding-top: 19px;
   }
 
   @media (min-width: @desktop-width) {
@@ -74,7 +112,6 @@
     padding-bottom: 32px;
   }
 }
-
 
 .nav-list__item:not(:first-child) {
   @media (min-width: @tablet-width) {
