--- a/source/less/base/blocks/program-card.less
+++ b/source/less/base/blocks/program-card.less
@@ -4,51 +4,48 @@
   position: relative;
 
   @media (min-width: @tablet-width) {
-    padding: 77px 0 53px 53px;
+    padding: 77px 0 55px 53px;
   }
 
   @media (min-width: @desktop-width) {
-    padding: 77px 61px 55px 52px;
-  }
-
-  &::after {
-    content: "";
-    position: absolute;
-    width: 70px;
-    height: 55px;
-    top: 19px;
-    left: 11px;
-
-    @media (min-width: @tablet-width) {
-      content: "";
-      position: absolute;
-      width: 270px;
-      height: 215px;
-      left: unset;
-      top: 20px;
-      right: 0;
-    }
-
-    @media (min-width: @desktop-width) {
-      content: "";
-      width: 134px;
-      height: 100px;
-      right: unset;
-      top: 20px;
-      left: 0;
-    }
+    padding: 77px 58px 59px 52px;
   }
 }
 
+.program-card::after {
+  content: "";
+  position: absolute;
+  width: 70px;
+  height: 55px;
+  top: 19px;
+  left: 11px;
+
+  @media (min-width: @tablet-width) {
+    content: "";
+    width: 270px;
+    height: 215px;
+    left: unset;
+    top: 79px;
+    right: 27px;
+  }
+
+  @media (min-width: @desktop-width) {
+    content: "";
+    width: 134px;
+    height: 100px;
+    right: unset;
+    top: 44px;
+    left: 35px;
+  }
+}
 
 .program-card--cat_sit {
   &::after {
     background-image: url("../img/cat-sit.svg");
     background-repeat: no-repeat;
     background-position: center center;
-  }
 
-  &::after {@media (min-width: @tablet-width) {
+    @media (min-width: @tablet-width) {
       background-size: contain;
     }
   }
@@ -59,15 +56,13 @@
     background-image: url("../img/cat-go.svg");
     background-repeat: no-repeat;
     background-position: center center;
-  }
 
-  &::after {
+
     @media (min-width: @tablet-width) {
       background-size: contain;
     }
   }
 }
-
 
 .program-card__title {
   .font-basic();
@@ -90,7 +85,6 @@
     margin-left: 160px;
     margin-bottom: 73px;
   }
-
 }
 
 .program-card__descr {
@@ -99,14 +93,16 @@
   max-width: 500px;
 
   @media (min-width: @tablet-width) {
-    width: 50%;
+    width: 51%;
     margin-bottom: 48px;
+    padding-bottom: 54px;
     border: none;
     color: #000000;
   }
 
   @media (min-width: @desktop-width) {
     width: 100%;
+    padding-bottom: 28px;
   }
 }
 
@@ -127,14 +123,14 @@
 
   @media (min-width: @tablet-width) {
     padding: 0;
-    font-size: 24px;
+    font-size: 20px;
     line-height: 30px;
     border: none;
-    width: 165px;
+    width: 163px;
     background-position: right center;
   }
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @desktop-width) {
     width: 168px;
   }
 }
