--- a/source/less/base/blocks/programs.less
+++ b/source/less/base/blocks/programs.less
@@ -20,12 +20,12 @@
 
 
   @media (min-width: @tablet-width) {
-    padding-top: 0;
+    padding: 0 30px 0 31px;
   }
 
   @media (min-width: @desktop-width) {
     display: flex;
-    padding: 82px 0 71px 0;
+    padding: 78px 0 71px 0;
     width: 1220px;
     margin: 0 auto;
   }
