--- a/source/less/base/blocks/slider.less
+++ b/source/less/base/blocks/slider.less
@@ -11,6 +11,10 @@
 .slider__list {
   .list-reset();
   position: relative;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 39px;
+  }
 }
 
 .slider__item {
@@ -31,37 +35,25 @@
   z-index: 5;
   border-right: 5px solid #666666;
   transition: all 30ms;
+  background-image: url("../img/fat-cat.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center left;
 
+  @media (min-resolution: 2dppx) {
+    background-image: url(../img/fat-cat@2x.png);
+  }
 
-  &::before {
   @media (min-width: @tablet-width) {
-      content: "";
-      width: 100%;
-      height: 151px;
-      position: absolute;
-      top: 0;
-      left: 0;
-      background-color: @color-light;
-      z-index: -1;
-    }
+    background-image: url("../img/fat-cat-tablet.png");
 
-    @media (min-width: @desktop-width) {
-      height: 18.5%;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/fat-cat-tablet@2x.png");
     }
   }
-}
+ }
 
-.slider__image {
-  width: 280px;
-  max-width: 280px;
-  min-height: 256px;
-  @media (min-width: @tablet-width) {
-    width: 560px;
-    max-width: 560px;
-    min-height: 512px;
-    object-fit: cover;
-  }
-}
 
 .slider__curtain {
   position: absolute;
@@ -74,7 +66,7 @@
   display: block;
   border: none;
   background-color: transparent;
- }
+}
 
 .slider__icon path {
   fill: #666666;
