--- a/source/less/base/blocks/social.less
+++ b/source/less/base/blocks/social.less
@@ -1,6 +1,10 @@
 .social {
   .list-reset();
-    display: flex;
+  display: flex;
+
+  @media (min-width: @tablet-width) {
+    padding-left: 25px;
+  }
 }
 
 .social__link {
@@ -24,7 +28,7 @@
 }
 
 .social__item:not(:last-child) {
- margin-right: 24px;
+  margin-right: 24px;
 }
 
 .social__item:last-child {
