--- a/source/less/base/blocks/main-header.less
+++ b/source/less/base/blocks/main-header.less
@@ -13,7 +13,7 @@
   padding-top: 65px;
 
   @media (min-width: @tablet-width) {
-    padding: 0 31px 0 30px;
+    padding: 0 32px 0 30px;
     display: flex;
     justify-content: flex-end;
     z-index: 10;
@@ -46,5 +46,6 @@
   @media (min-width: @desktop-width) {
     top: 53px;
     left: 0;
+    z-index: 10;
   }
 }
