--- a/source/less/elements/form.less
+++ b/source/less/elements/form.less
@@ -42,8 +42,9 @@
 
   @media (min-width: @tablet-width) {
     margin-bottom: 0;
-    width: 306px;
+    width: 311px;
     padding-bottom: 18px;
+    font-size: 20px;
   }
 
   @media (min-width: @desktop-width) {
