--- a/source/less/elements/group-contact.less
+++ b/source/less/elements/group-contact.less
@@ -13,6 +13,10 @@
   @media (min-width: @tablet-width) {
     margin-bottom: 72px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 74px;
+  }
 }
 
 .group-contact__list {
@@ -53,5 +57,5 @@
 }
 
 .group-contact__input {
-  padding: 0 45px 0 12px;
+  padding: 0 45px 0 21px;
 }
