--- a/source/less/base/blocks/it-works.less
+++ b/source/less/base/blocks/it-works.less
@@ -1,12 +1,12 @@
 .it-works {
   padding: 20px 22px 29px 20px;
 
-  @media(min-width: @tablet-width) {
+  @media (min-width: @tablet-width) {
     padding: 45px 31px 47px 31px;
     border-bottom: 1px solid #e6e6e6;
   }
 
-  @media(min-width: @desktop-width) {
+  @media (min-width: @desktop-width) {
     border: none;
     padding: 0;
   }
@@ -117,7 +117,7 @@
 
 .it-works__item--leave {
   &::before {
-    background-image: url(../img/leave.svg);
+    background-image: url("../img/leave.svg");
   }
 
   &::after {
@@ -129,7 +129,7 @@
 
 .it-works__item--liquid {
   &::before {
-    background-image: url(../img/liquid.svg);
+    background-image: url("../img/liquid.svg");
   }
 
   &::after {
@@ -141,7 +141,7 @@
 
 .it-works__item--tableware {
   &::before {
-    background-image: url(../img/tableware.svg);
+    background-image: url("../img/tableware.svg");
   }
 
   &::after {
@@ -153,7 +153,7 @@
 
 .it-works__item--time {
   &::before {
-    background-image: url(../img/time.svg);
+    background-image: url("../img/time.svg");
   }
 
   &::after {
