--- a/source/less/base/blocks/slider.less
+++ b/source/less/base/blocks/slider.less
@@ -1,6 +1,7 @@
 .slider {
   width: 280px;
   height: 256px;
+  position: relative;
 
   @media (min-width: @tablet-width) {
     width: 560px;
@@ -12,7 +13,7 @@
   .list-reset();
   position: relative;
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @desktop-width) {
     padding-top: 39px;
   }
 }
@@ -21,6 +22,8 @@
   width: 280px;
   height: 256px;
   position: absolute;
+  top: 0;
+  left: 0;
 
   @media (min-width: @tablet-width) {
     width: 560px;
@@ -34,46 +37,102 @@
   background-color: @color-medium;
   z-index: 5;
   border-right: 5px solid #666666;
-  transition: all 30ms;
-  background-image: url("../img/fat-cat.png");
+  transition: all 2s ease-in-out;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center left;
 
-  @media (min-resolution: 2dppx) {
-    background-image: url(../img/fat-cat@2x.png);
+  @media (min-width: @desktop-width) {
+    background-color: @color-dark;
   }
 
-  @media (min-width: @tablet-width) {
-    background-image: url("../img/fat-cat-tablet.png");
+  &:hover {
+    border-right: 5px solid #68b738;
+    transition-duration: 1ms;
+  }
 
+  &:active {
+    border-right: 5px solid fade(#68b738, 60%);
+    transition-duration: 1ms;
+  }
+
+  &::before {
+    content: "";
+    width: 280px;
+    height: 256px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: url("../img/fat-cat.png");
+    background-size: contain;
+    z-index: 5;
+
+    @media (min-width: @tablet-width) {
+      width: 560px;
+      height: 512px;
+    }
 
     @media (min-resolution: 2dppx) {
-      background-image: url("../img/fat-cat-tablet@2x.png");
+      background-image: url("../img/fat-cat@2x.png");
+    }
+
+    @media (min-width: @tablet-width) {
+      background-image: url("../img/fat-cat-tablet.png");
+
+
+      @media (min-resolution: 2dppx) {
+        background-image: url("../img/fat-cat-tablet@2x.png");
+      }
     }
   }
- }
 
+  &::after {
+    @media (min-width: @tablet-width) {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 560px;
+      height: 152px;
+      background-color: @color-light;
+      z-index: 1;
+    }
 
-.slider__curtain {
-  position: absolute;
-  top: 50%;
-  right: -9%;
-  z-index: 10;
+    @media (min-width: @desktop-width) {
+      height: 135px;
+    }
+  }
+}
+
+.slider--after .slider__item--fat {
+  width: 0;
+}
+
+.slider--before .slider__item--fat {
+  width: 100%;
 }
 
 .slider__button {
   display: block;
   border: none;
-  background-color: transparent;
+  z-index: 10;
+  position: absolute;
+  left: 50%;
+  margin-left: -26px;
+  top: 50%;
+  margin-top: -19px;
+  cursor: pointer;
+  transition: all 2s ease-in-out;
+  width: 40px;
+  height: 40px;
+  mask-image: url("../img/stack.svg#thumb");
+  background-color: #666666;
 }
 
-.slider__icon path {
-  fill: #666666;
+.slider--after .slider__button {
+  left: 1%;
 }
 
-.slider__icon rect {
-  stroke: #666666;
+.slider--before .slider__button {
+  left: 100%;
 }
-
-
