--- a/source/less/base/blocks/social.less
+++ b/source/less/base/blocks/social.less
@@ -15,16 +15,16 @@
   background-position: center center;
 }
 
-.social__link--vk {
-  background-image: url("../img/vk.svg");
+.social__svg {
+  fill: #666666;
 }
 
-.social__link--youtube {
-  background-image: url("../img/youtube.svg");
+.social__link:hover .social__svg {
+  fill: #68b738;
 }
 
-.social__link--telegram {
-  background-image: url("../img/telegram.svg");
+.social__link:active .social__svg {
+  fill: fade(#68b738, 30%);
 }
 
 .social__item:not(:last-child) {
@@ -34,4 +34,3 @@
 .social__item:last-child {
   margin: 0;
 }
-
