--- a/source/less/base/blocks/main-footer.less
+++ b/source/less/base/blocks/main-footer.less
@@ -63,6 +63,14 @@
   padding-top: 5px;
 }
 
+.main-footer__catalog {
+  padding-top: 22px;
+
+  @media (min-width: @tablet-width) {
+    padding-top: 8px;
+  }
+}
+
 .main-footer__copyright-svg {
   fill: #444444;
 }
@@ -81,4 +89,8 @@
 
 .main-footer__copyright-image:active .main-footer__svg {
   fill: fade(#68b738, 30%);
+}
+
+.main-footer__catalog-social {
+  padding-top: 18px;
 }
