--- a/source/less/elements/additional.less
+++ b/source/less/elements/additional.less
@@ -1,9 +1,15 @@
+.additional {
+  @media (min-width: @desktop-width) {
+    margin-bottom: 90px;
+  }
+}
+
 .additional__title {
   margin-top: 15px;
   margin-bottom: 39px;
 
   @media (min-width: @tablet-width) {
-    margin-top: 68px;
+    margin-top: 60px;
     margin-bottom: 84px;
   }
 
@@ -42,12 +48,12 @@
 
 .additional__list {
   .list-reset();
-  margin: 0 25px 0 20px;
+  margin: 0 23px 0 20px;
   border-top: 1px solid #cdcdcd;
 
   @media (min-width: @tablet-width) {
     border: 1px solid #cdcdcd;
-    margin: 0 23px 0 30px;
+    margin: 0 29px 0 30px;
   }
 
   @media (min-width: @desktop-width) {
@@ -59,8 +65,7 @@
 
 .additional__container {
   padding: 35px 0;
-  margin: 0 20px;
-  min-width: 320px;
+  margin: 0 21px 0 20px;
 
   @media (min-width: @tablet-width) {
     margin: 0 30px;
@@ -75,7 +80,7 @@
 }
 
 .additional__link {
-  padding: 187px 60px 43px;
+  padding: 187px 60px 42px;
   background-color: #62a53a;
   text-decoration: none;
   position: relative;
@@ -91,8 +96,8 @@
   }
 
   @media (min-width: @tablet-width) and (max-width: @desktop-width) {
-    padding: 59px 124px 60px 118px;
-    background-position: center -302px;
+    padding: 59px 124px 62px 118px;
+    background-position: center -321px;
     justify-content: space-between;
   }
 
@@ -129,7 +134,7 @@
 
   @media (min-width: @tablet-width) and (max-width: @desktop-width) {
     text-align: left;
-    padding-top: 10px;
+    padding-top: 13px;
   }
 
   @media (min-width: @desktop-width) {
