--- a/source/less/base/blocks/example.less
+++ b/source/less/base/blocks/example.less
@@ -213,11 +213,7 @@
 
 .example__contain {
   position: relative;
-
-  @media (min-width: @tablet-width) {
-    transform: translateX(50%);
-    left: -200px;
-  }
+  margin: 0 auto;
 
   @media (min-width: @desktop-width) {
     position: absolute;
