--- a/source/less/base/blocks/program-card.less
+++ b/source/less/base/blocks/program-card.less
@@ -143,8 +143,13 @@
   background-image: url("../img/arrow.svg");
   background-repeat: no-repeat;
   background-size: contain;
-  top: 7px;
-  left: 129px;
+  top: 20px;
+  left: 102px;
+
+  @media (min-width: @tablet-width) {
+    top: 7px;
+    left: 129px;
+  }
 }
 
 .program-card__link:hover::before {
