--- a/source/less/base/blocks/slider.less
+++ b/source/less/base/blocks/slider.less
@@ -33,10 +33,9 @@
 
 .slider__item--fat {
   overflow: hidden;
-  width: 50%;
+  width: calc(50% + 4px);
   background-color: @color-medium;
   z-index: 5;
-  border-right: 5px solid #666666;
   transition: all 2s ease-in-out;
   background-repeat: no-repeat;
   background-size: cover;
@@ -44,16 +43,6 @@
 
   @media (min-width: @desktop-width) {
     background-color: @color-dark;
-  }
-
-  &:hover {
-    border-right: 5px solid #68b738;
-    transition-duration: 1ms;
-  }
-
-  &:active {
-    border-right: 5px solid fade(#68b738, 60%);
-    transition-duration: 1ms;
   }
 
   &::before {
@@ -105,28 +94,68 @@
 }
 
 .slider--after .slider__item--fat {
-  width: 0;
+  width: 4px;
 }
 
 .slider--before .slider__item--fat {
-  width: 100%;
+  width: calc(100% + 4px);
 }
 
 .slider__button {
   display: block;
-  border: none;
   z-index: 10;
   position: absolute;
   left: 50%;
-  margin-left: -26px;
+  margin-left: -21px;
   top: 50%;
   margin-top: -19px;
   cursor: pointer;
-  transition: all 2s ease-in-out;
-  width: 40px;
-  height: 40px;
-  mask-image: url("../img/stack.svg#thumb");
-  background-color: #666666;
+  transition: left 2s ease-in-out;
+  width: 42px;
+  height: 42px;
+  border: 4px solid #666666;
+  border-radius: 50%;
+
+  &:hover {
+    border-color: #68b738;
+  }
+
+  &:active {
+    border-color: fade(#68b738, 60%);
+  }
+
+  &::before {
+    content: "";
+    height: 256px;
+    width: 1px;
+    border-right: 5px solid #666666;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    @media (min-width: @tablet-width) {
+      height: 512px;
+    }
+  }
+
+  &::after {
+    content: "";
+    height: 36px;
+    width: 1px;
+    border-right: 6px solid @color-medium;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+.slider__icon {
+  fill: #666666;
+  position: absolute;
+  top: -2px;
+  left: -2px;
 }
 
 .slider--after .slider__button {
@@ -135,4 +164,20 @@
 
 .slider--before .slider__button {
   left: 100%;
+}
+
+.slider__button:hover .slider__icon {
+  fill: #68b738;
+}
+
+.slider__button:active .slider__icon {
+  fill: fade(#68b738, 60%);
+}
+
+.slider__button:hover::before {
+  border-color: #68b738;
+}
+
+.slider__button:active::before {
+  border-color: fade(#68b738, 60%);
 }
