--- a/source/less/elements/catalog.less
+++ b/source/less/elements/catalog.less
@@ -1,12 +1,18 @@
 .catalog__title {
-  margin-top: 46px;
-  margin-bottom: 81px;
-  margin-left: 30px;
+  margin-top: 28px;
+  margin-bottom: 40px;
+  margin-left: 20px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 50px;
+    margin-left: 30px;
+    margin-bottom: 77px;
+  }
 
   @media (min-width: @desktop-width) {
     width: 1220px;
     margin: 0 auto;
-    margin-top: 46px;
-    margin-bottom: 72px;
+    margin-top: 48px;
+    margin-bottom: 80px;
   }
 }
