--- a/source/less/base/blocks/social.less
+++ b/source/less/base/blocks/social.less
@@ -35,6 +35,10 @@
   margin: 0;
 }
 
-.social__catalog {
-  padding-left: 30px;
+.social--catalog {
+  padding-left: 3px;
+
+  @media (min-width: @tablet-width) {
+    padding-left: 27px;
+  }
 }
