--- a/source/less/elements/additional.less
+++ b/source/less/elements/additional.less
@@ -95,7 +95,7 @@
     background-image: url("../img/catalog/catalog-cat@2x.jpg");
   }
 
-  @media (min-width: @tablet-width) and (max-width: @desktop-width) {
+  @media (min-width: @tablet-width) and (max-width: 1439px) {
     padding: 59px 124px 62px 118px;
     background-position: center -321px;
     justify-content: space-between;
@@ -117,7 +117,7 @@
   left: 50%;
   transform: translateX(-50%);
 
-  @media (min-width: @tablet-width) and (max-width: @desktop-width) {
+  @media (min-width: @tablet-width) and (max-width: 1439px) {
     display: block;
     position: static;
   }
@@ -132,7 +132,7 @@
   display: block;
   text-align: center;
 
-  @media (min-width: @tablet-width) and (max-width: @desktop-width) {
+  @media (min-width: @tablet-width) and (max-width: 1439px) {
     text-align: left;
     padding-top: 13px;
   }
