--- a/source/less/elements/checkbox.less
+++ b/source/less/elements/checkbox.less
@@ -59,6 +59,10 @@
   border-color: #bababa;
 }
 
+.checkbox__input:focus + .checkbox__label::before {
+  outline: 2px solid #000000;
+}
+
 .checkbox__input:disabled + .checkbox__label {
   color: fade(#222222, 30%);
 
