--- a/source/less/elements/radio.less
+++ b/source/less/elements/radio.less
@@ -60,6 +60,10 @@
   border-color: #bababa;
 }
 
+.radio__input:focus + .radio__label::before {
+  outline: 2px solid #000000;
+}
+
 .radio__input:disabled + .radio__label {
   color: fade(#222222, 30%);
 
