--- a/source/less/base/blocks/hero.less
+++ b/source/less/base/blocks/hero.less
@@ -63,7 +63,8 @@
       background-repeat: no-repeat;
       background-size: contain;
       background-position: center center;
-      left: 57%;
+      left: 60%;
+      margin-left: -56px;
 
       @media (min-resolution: 2dppx) {
         background-image: url("../img/product-view-desktop@2x.png");
@@ -133,7 +134,7 @@
 }
 
 .hero__container::before {
-  @media (max-width: @tablet-width) {
+  @media (max-width: 767px) {
     content: "";
     position: absolute;
     width: 280px;
