--- a/source/less/elements/card.less
+++ b/source/less/elements/card.less
@@ -215,15 +215,15 @@
   top: 25px;
   left: 50%;
   transform: translateX(-50%);
-  background-image: url("../img/catalog/plus.svg");
+  background-image: url("../img/plus.svg");
   background-repeat: no-repeat;
   background-position: center center;
 
   @media (min-width: @tablet-width) {
     width: 60px;
     height: 60px;
-    background-image: url("../img/catalog/plus-tablet.svg");
-    top: 139px;
+    background-image: url("../img/plus-tablet.svg");
+    top: 136px;
   }
 }
 
