--- a/source/less/elements/special-title.less
+++ b/source/less/elements/special-title.less
@@ -18,6 +18,7 @@
 
 .special-title__container {
   @media (min-width: @desktop-width) {
+    display: block;
     margin: 0 auto;
     width: 1290px;
   }
