--- a/source/less/elements/text-input.less
+++ b/source/less/elements/text-input.less
@@ -3,8 +3,12 @@
   display: flex;
   gap: 13px;
 
-  @media (min-width: @tablet-width) and  (max-width: @desktop-width) {
+  @media (min-width: @tablet-width) and  (max-width: 1439px) {
     gap: 18px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: auto;
   }
 }
 
