--- a/source/less/elements/card.less
+++ b/source/less/elements/card.less
@@ -10,7 +10,7 @@
     border: none;
 
     @media (min-width: @desktop-width) {
-      padding: 248px 36px 40px 42px;
+      padding: 248px 39px 40px;
       min-width: 245px;
     }
 
@@ -125,8 +125,13 @@
 
   @media (min-width: @tablet-width) {
     border-bottom: 1px solid #cdcdcd;
-    margin-bottom: 7px;
+    margin-bottom: 1px;
     padding-bottom: 8px;
+  }
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 2px;
+    padding-bottom: 7px;
   }
 }
 
@@ -138,6 +143,7 @@
 
   @media (min-width: @tablet-width) {
     font-size: 16px;
+    line-height: 20px;
   }
 }
 
@@ -188,7 +194,7 @@
 
   @media (min-width: @desktop-width) {
     max-width: 100%;
-    margin-bottom: 24px;
+    margin-bottom: 20px;
   }
 }
 
