--- a/source/less/elements/group-contact.less
+++ b/source/less/elements/group-contact.less
@@ -31,6 +31,8 @@
     flex-wrap: wrap;
     width: 1220px;
     margin: 0 auto;
+    justify-content: space-between;
+    gap: 23px 10px;
   }
 }
 
@@ -44,7 +46,6 @@
 
   @media (min-width: @desktop-width) {
     margin-bottom: 0;
-    margin-right: 78px;
     gap: 20px;
   }
 }
